# NativeReactLikeInMacintosh

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  dialog.c  dialog.h  dialog.tpl  dukbridge.c  dukbridge.h  main.c  makeResource.js  package.json  types.h  utils.h
app/: fakeReact.js  index.js
